--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ code {
 .todo-list{
   background: #e8e8e8;
   border-radius: 4px;
-  padding: 5px;
+  padding: 550px;
   max-width: 400px;
 }
 
@@ -53,4 +53,37 @@ h1 {
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   color: blue;
+}
+
+h2 {
+  text-align: center;
+}
+
+.header {
+  text-align: center;
+}
+
+.planner-item {
+  background-color: beige;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 10px 0;
+}
+
+.planner-item:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+input {
+  background-color: lightblue;
+  padding: 2px;
+}
+
+input:hover {
+  background-color: lightcyan;
+}
+
+.planner-item:last-of-type {
+  margin: 0;
 }
